--- a/src/operatingsystems/procList.fxml
+++ b/src/operatingsystems/procList.fxml
@@ -7,11 +7,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="dragPane" minWidth="810.0" prefHeight="540.0" prefWidth="450.0" style="-fx-background-color: #BBCFDB;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="operatingsystems.ProcListController">
+<AnchorPane fx:id="dragPane" minWidth="900.0" prefHeight="540.0" prefWidth="450.0" style="-fx-background-color: #BBCFDB;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="operatingsystems.ProcListController">
    <children>
-      <TableView fx:id="tableView" layoutX="-3.0" layoutY="41.0" maxHeight="499.0" minWidth="810.0" prefHeight="499.0" prefWidth="450.0" style="-fx-background-color: transparent;" stylesheets="@procList.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="41.0">
+      <TableView fx:id="tableView" layoutX="-3.0" layoutY="41.0" maxHeight="499.0" minWidth="900.0" prefHeight="499.0" prefWidth="450.0" style="-fx-background-color: transparent;" stylesheets="@procList.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="41.0">
          <columns>
             <TableColumn fx:id="PID" editable="false" prefWidth="90.0" text="PID" />
+            <TableColumn fx:id="PRIORITY" editable="false" prefWidth="90.0" text="Priority" />
             <TableColumn fx:id="ARRIVAL" editable="false" prefWidth="90.0" text="Arrival" />
             <TableColumn fx:id="START" editable="false" prefWidth="90.0" text="Start" />
             <TableColumn fx:id="END" editable="false" prefWidth="90.0" text="End" />
@@ -22,12 +23,12 @@
             <TableColumn fx:id="WAIT" editable="false" prefWidth="90.0" text="Wait" />
          </columns>
       </TableView>
-      <Label layoutX="227.0" layoutY="11.0" text="+++++++++++++++++DRAG HERE+++++++++++++++++">
+      <Label layoutX="272.0" layoutY="11.0" text="+++++++++++++++++DRAG HERE+++++++++++++++++">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <JFXButton fx:id="closeButton" layoutX="769.0" layoutY="6.0" onAction="#ExitApp" style="-fx-background-color: #E63946; -fx-border-color: #000; -fx-border-radius: 2px;" text="X" textFill="WHITE">
+      <JFXButton fx:id="closeButton" layoutX="859.0" layoutY="6.0" onAction="#ExitApp" style="-fx-background-color: #E63946; -fx-border-color: #000; -fx-border-radius: 2px;" text="X" textFill="WHITE">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
